# mypyproject

./: .gitignore  MANIFEST.in  README.md  benchmark.py  pyproject.toml  setup.py  tox.ini
mypkg/: .coveragerc  MANIFEST.in  pyproject.toml  setup.py  tox.ini
mypkg/csrc/: CMakeLists.txt
mypkg/csrc/include/: core.hpp
mypkg/csrc/src/: bindings.cpp  core.cpp
mypkg/rustsrc/: Cargo.toml
mypkg/rustsrc/src/: lib.rs
mypkg/tests/: test_pysample.py
myproject/: __init__.py  multiply_numpy.py  multiply_py.py
myproject/cpp/: CMakeLists.txt  README.md
myproject/cpp/include/: multiply.hpp
myproject/cpp/src/: bindings.cpp  multiply.cpp
pypkg/: .gitignore  README.md  mypy.ini  pyproject.toml  tox.ini
pypkg/pysample/: __init__.py  core.py
pypkg/tests/: test_pysample.py
tests/: test_cpp.py  test_mypy.py  test_py.py
